# trilium-fastmcp

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  client.py  config.py  main.py  tools.py
app/attachment/: schemas.py  tools.py
app/attribute/: tools.py
app/attributes/: schemas.py  tools.py
app/backup/: tools.py
app/branch/: schemas.py  tools.py
app/clipper/: extractor.py  schemas.py  security.py  tools.py
app/general/: schemas.py  tools.py
app/note/: schemas.py  tools.py
app/notes/: schemas.py  tools.py
app/revision/: schemas.py  tools.py
tests/unit/: conftest.py  test_auth.py  test_client.py  test_main.py  test_schemas.py  test_tools.py
tests/unit/attachment/: test_tools.py
tests/unit/attributes/: test_tools.py
tests/unit/backup/: test_tools.py
tests/unit/branch/: test_schemas.py  test_tools.py
tests/unit/clipper/: test_extractor.py  test_security.py  test_tools.py
tests/unit/general/: test_schemas.py  test_tools.py
tests/unit/notes/: test_schemas.py  test_tools.py
tests/unit/revision/: test_schemas.py  test_tools.py
