[project]
name = "trilium-fastmcp"
version = "0.1.0"
description = "An MCP (Model Context Protocol) server for Trilium Notes, exposing the ETAPI as MCP tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
    "fastmcp==3.1.1",
    "httpx>=0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["trilium_fastmcp"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
